--- a/public/event/tet2025/index.html
+++ b/public/event/tet2025/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
-  <title>🌸 “𝐓𝐞̂́𝐭 𝐍𝐨̛𝐢 𝐗𝐚 - 𝐀̂́𝐦 𝐀́𝐩 𝐓𝐮̛̣𝐚 𝐍𝐡𝐚̀” - VSA Lunar New Year 2025 🌸 &middot; </title>
-  <meta name="title" content="🌸 “𝐓𝐞̂́𝐭 𝐍𝐨̛𝐢 𝐗𝐚 - 𝐀̂́𝐦 𝐀́𝐩 𝐓𝐮̛̣𝐚 𝐍𝐡𝐚̀” - VSA Lunar New Year 2025 🌸 &middot; " />
+  <title>🌸 “𝐓𝐞̂́𝐭 𝐍𝐨̛𝐢 𝐗𝐚 - 𝐀̂́𝐦 𝐀́𝐩 𝐓𝐮̛̣𝐚 𝐍𝐡𝐚̀” - VSA Lunar New Year 2025 🌸 &middot;  </title>
+  <meta name="title" content="🌸 “𝐓𝐞̂́𝐭 𝐍𝐨̛𝐢 𝐗𝐚 - 𝐀̂́𝐦 𝐀́𝐩 𝐓𝐮̛̣𝐚 𝐍𝐡𝐚̀” - VSA Lunar New Year 2025 🌸 &middot;  " />
   
   <meta name="description" content="VSA thật hạnh phúc khi được cùng các bạn tái hiện một góc xuân Việt với những hoạt động ý nghĩa như thi thời trang giấy, trang trí cành mai, cành đào, và các trò chơi dân gian đầy niềm vui. Những tiếng cười và khoảnh khắc sum vầy chính là điều làm nên sự đặc biệt của sự kiện lần này. 💖" />
   <meta name="keywords" content="event, in-person, " />
@@ -65,6 +65,7 @@
   
   
   <meta property="og:url" content="http://localhost:1313/event/tet2025/">
+  <meta property="og:site_name" content=" ">
   <meta property="og:title" content="🌸 “𝐓𝐞̂́𝐭 𝐍𝐨̛𝐢 𝐗𝐚 - 𝐀̂́𝐦 𝐀́𝐩 𝐓𝐮̛̣𝐚 𝐍𝐡𝐚̀” - VSA Lunar New Year 2025 🌸">
   <meta property="og:description" content="VSA thật hạnh phúc khi được cùng các bạn tái hiện một góc xuân Việt với những hoạt động ý nghĩa như thi thời trang giấy, trang trí cành mai, cành đào, và các trò chơi dân gian đầy niềm vui. Những tiếng cười và khoảnh khắc sum vầy chính là điều làm nên sự đặc biệt của sự kiện lần này. 💖">
   <meta property="og:locale" content="en">
@@ -195,7 +196,7 @@
 
             
             <img src="/VSA%202025%20-%20Official%20logos-02.png" width="2250" height="2250"
-                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt="" />
+                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt=" " />
             
 
         </a>
