--- a/public/event/zenfest/index.html
+++ b/public/event/zenfest/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
-  <title>~ VSA ZenZest Fest 2024 ~ &middot; </title>
-  <meta name="title" content="~ VSA ZenZest Fest 2024 ~ &middot; " />
+  <title>~ VSA ZenZest Fest 2024 ~ &middot;  </title>
+  <meta name="title" content="~ VSA ZenZest Fest 2024 ~ &middot;  " />
   
   <meta name="description" content="Các bạn có cảm thấy căng thẳng sau những bài kiểm tra và deadlines sau nửa chặng được của học kì không? 😓 Đừng lo lắng, ZenZest Fest sẽ là liều thuốc giúp bạn sạc lại năng lượng ngay đây! ⚡Sự kiện nhằm để giúp bạn được kết nối với bạn bè sau những ngày học tập căng thẳng" />
   <meta name="keywords" content="event, in-person, " />
@@ -65,6 +65,7 @@
   
   
   <meta property="og:url" content="http://localhost:1313/event/zenfest/">
+  <meta property="og:site_name" content=" ">
   <meta property="og:title" content="~ VSA ZenZest Fest 2024 ~">
   <meta property="og:description" content="Các bạn có cảm thấy căng thẳng sau những bài kiểm tra và deadlines sau nửa chặng được của học kì không? 😓 Đừng lo lắng, ZenZest Fest sẽ là liều thuốc giúp bạn sạc lại năng lượng ngay đây! ⚡Sự kiện nhằm để giúp bạn được kết nối với bạn bè sau những ngày học tập căng thẳng">
   <meta property="og:locale" content="en">
@@ -195,7 +196,7 @@
 
             
             <img src="/VSA%202025%20-%20Official%20logos-02.png" width="2250" height="2250"
-                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt="" />
+                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt=" " />
             
 
         </a>
