--- a/public/event/index.html
+++ b/public/event/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
-  <title> &middot; </title>
-  <meta name="title" content=" &middot; " />
+  <title> &middot;  </title>
+  <meta name="title" content=" &middot;  " />
   
   <meta name="description" content="The Vietnamese Student Association (VSA) at Sheridan College is dedicated to helping Vietnamese students adapt to life abroad and engage in building a vibrant community. Our mission is to provide support, foster connections, and create opportunities for personal and professional growth. Join us to make the most of your experience at Sheridan College and beyond!" />
   
@@ -17,7 +17,7 @@
   
   <link rel="canonical" href="http://localhost:1313/event/" />
   
-  <link rel="alternate" type="application/rss+xml" href="/event/index.xml" title="" />
+  <link rel="alternate" type="application/rss+xml" href="/event/index.xml" title=" " />
   
   
   
@@ -67,12 +67,15 @@
   
   
   <meta property="og:url" content="http://localhost:1313/event/">
+  <meta property="og:site_name" content=" ">
+  <meta property="og:title" content=" ">
   <meta property="og:description" content="The Vietnamese Student Association (VSA) at Sheridan College is dedicated to helping Vietnamese students adapt to life abroad and engage in building a vibrant community. Our mission is to provide support, foster connections, and create opportunities for personal and professional growth. Join us to make the most of your experience at Sheridan College and beyond!">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 
   
   <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content=" ">
   <meta name="twitter:description" content="The Vietnamese Student Association (VSA) at Sheridan College is dedicated to helping Vietnamese students adapt to life abroad and engage in building a vibrant community. Our mission is to provide support, foster connections, and create opportunities for personal and professional growth. Join us to make the most of your experience at Sheridan College and beyond!">
 
   
@@ -157,7 +160,7 @@
 
             
             <img src="/VSA%202025%20-%20Official%20logos-02.png" width="2250" height="2250"
-                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt="" />
+                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt=" " />
             
 
         </a>
