--- a/public/event/online-card-making-feb-26-25/index.html
+++ b/public/event/online-card-making-feb-26-25/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   
-  <title>🌸🌸🌸 Online Card Making Contest 🌸🌸🌸 &middot; </title>
-  <meta name="title" content="🌸🌸🌸 Online Card Making Contest 🌸🌸🌸 &middot; " />
+  <title>🌸🌸🌸 Online Card Making Contest 🌸🌸🌸 &middot;  </title>
+  <meta name="title" content="🌸🌸🌸 Online Card Making Contest 🌸🌸🌸 &middot;  " />
   
   <meta name="description" content="Our New Event For The Women Day - August 3rd " />
   <meta name="keywords" content="event, online, " />
@@ -65,6 +65,7 @@
   
   
   <meta property="og:url" content="http://localhost:1313/event/online-card-making-feb-26-25/">
+  <meta property="og:site_name" content=" ">
   <meta property="og:title" content="🌸🌸🌸 Online Card Making Contest 🌸🌸🌸">
   <meta property="og:description" content="Our New Event For The Women Day - August 3rd">
   <meta property="og:locale" content="en">
@@ -188,7 +189,7 @@
 
             
             <img src="/VSA%202025%20-%20Official%20logos-02.png" width="2250" height="2250"
-                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt="" />
+                class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt=" " />
             
 
         </a>
