--- a/public/about/index.html
+++ b/public/about/index.html
@@ -592,7 +592,7 @@
         <td style="padding: 15px; text-align: center;"><img src="./image/tung.png" alt="Tung Le" style="width: 480px; height: auto;" /></td>
         <td style="padding: 15px; text-align: center;"><img src="./image/huy.png" alt="Vu Anh Huy Nguyen" style="width: 480px; height: auto;" /></td>
         <td style="padding: 15px; text-align: center;"><img src="./image/alice.jpg" alt="Minh Anh" style="width: 480px; height: auto;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/phu.png" alt="Manh Phu Giang" style="width: 480px; height: auto;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/phu.jpg" alt="Manh Phu Giang" style="width: 480px; height: auto;" /></td>
     </tr>
     <tr>
         <td style="text-align: center;"><strong>Tung Le</strong><br/>Social Media Coordinator</td>
