about picture changes

--- a/public/contactus/index.html
+++ b/public/contactus/index.html
@@ -575,7 +575,9 @@
     </span>        
     
 </h2>
-<p>You can email us at: <a href="mailto:vsa.sheridancollege@gmail.com">vsa.sheridancollege@gmail.com</a></p>
+<p>General:  <a href="mailto:suppot@sheridanvsa.ca">support@sheridanvsa.ca</a></p>
+<p>Event Related:  <a href="mailto:event@sheridanvsa.ca">event@sheridanvsa.ca</a></p>
+<p>Sponsorship:  <a href="mailto:vsa.sheridancollege@gmail.com">vsa.sheridancollege@gmail.com</a></p>
 
 
 <h2 class="relative group">📱 Phone 
