--- a/public/about/index.html
+++ b/public/about/index.html
@@ -577,9 +577,9 @@
 </h2>
 <table style="width: 90%; text-align: center; margin-left: auto; margin-right: auto;">
     <tr>
-        <td style="padding: 15px; text-align: center;"><img src="./image/anh-ben.jpeg" alt="Ben Nguyen" style="width: 480px; height: auto;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/tam.jpeg" alt="Tam Nguyen" style="width: 480px; height: 365px;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/tan.jpeg" alt="Tan Pham" style="width: 480px; height: 365px;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/anh-ben.jpeg" alt="Ben Nguyen" style="width: 480px; height: 480px; object-fit: cover;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/tam.jpeg" alt="Tam Nguyen" style="width: 480px; height: 480px; object-fit: cover;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/tan.jpeg" alt="Tan Pham" style="width: 480px; height: 480px; object-fit: cover;" /></td>
     </tr>
     <tr>
         <td style="text-align: center;"><strong>Ben Nguyen</strong><br/>President</td>
@@ -589,10 +589,10 @@
 </table>
 <table style="width: 100%; text-align: center; margin-left: auto; margin-right: auto;">
     <tr>
-        <td style="padding: 15px; text-align: center;"><img src="./image/tung.jpeg" alt="Tung Le" style="width: 480px; height: 300px;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/huy.png" alt="Vu Anh Huy Nguyen" style="width: 680px; height: auto;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/alice.jpg" alt="Minh Anh" style="width: 480px; height: auto;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/phu.jpg" alt="Manh Phu Giang" style="width: 480px; height: auto;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/tung.jpeg" alt="Tung Le" style="width: 480px; height: 280px; object-fit: cover;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/huy.png" alt="Vu Anh Huy Nguyen" style="width: 480px; height: 280px;  object-fit: cover;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/alice.jpg" alt="Minh Anh" style="width: 480px; height: 280px; object-fit: cover;" /></td>
+        <td style="padding: 15px; text-align: center;"><img src="./image/phu.jpg" alt="Manh Phu Giang" style="width: 480px; height: 280px;  object-fit: cover;" /></td>
     </tr>
     <tr>
         <td style="text-align: center;"><strong>Tung Le</strong><br/>Social Media Coordinator</td>
