change aspect ratio

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -576,24 +576,45 @@
     
 </h2>
 <table style="width: 90%; text-align: center; margin-left: auto; margin-right: auto;">
-    <tr>
-        <td style="padding: 15px; text-align: center;"><img src="./image/anh-ben.jpeg" alt="Ben Nguyen" style="width: 480px; height: 480px; object-fit: cover;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/tam.jpeg" alt="Tam Nguyen" style="width: 480px; height: 480px; object-fit: cover;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/tan.jpeg" alt="Tan Pham" style="width: 480px; height: 480px; object-fit: cover;" /></td>
-    </tr>
+<tr>
+    <td style="padding: 15px; text-align: center;">
+        <img src="./image/anh-ben.jpeg" alt="Ben Nguyen" 
+             style="width: 100%; max-width: 300px; height: auto; aspect-ratio: 1/1; object-fit: cover;  aspect-ratio: 1/1" />
+    </td>
+    <td style="padding: 15px; text-align: center;">
+        <img src="./image/tam.jpeg" alt="Tam Nguyen" 
+             style="width: 100%; max-width: 300px; height: auto; aspect-ratio: 1/1; object-fit: cover;  aspect-ratio: 1/1" />
+    </td>
+    <td style="padding: 15px; text-align: center;">
+        <img src="./image/tan.jpeg" alt="Tan Pham" 
+             style="width: 100%; max-width: 300px; height: auto; aspect-ratio: 1/1; object-fit: cover;  aspect-ratio: 1/1" />
+    </td>
+</tr>
     <tr>
         <td style="text-align: center;"><strong>Ben Nguyen</strong><br/>President</td>
         <td style="text-align: center;"><strong>Tam Nguyen</strong><br/>VP - Social Media Coordinator</td>
         <td style="text-align: center;"><strong>Tan Pham</strong><br/>VP - Event Planner</td>
     </tr>
 </table>
-<table style="width: 100%; text-align: center; margin-left: auto; margin-right: auto;">
-    <tr>
-        <td style="padding: 15px; text-align: center;"><img src="./image/tung.jpeg" alt="Tung Le" style="width: 480px; height: 280px; object-fit: cover;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/huy.png" alt="Vu Anh Huy Nguyen" style="width: 480px; height: 280px;  object-fit: cover;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/alice.jpg" alt="Minh Anh" style="width: 480px; height: 280px; object-fit: cover;" /></td>
-        <td style="padding: 15px; text-align: center;"><img src="./image/phu.jpg" alt="Manh Phu Giang" style="width: 480px; height: 280px;  object-fit: cover;" /></td>
-    </tr>
+<table style="width: 100%; text-align: center; margin-left: auto; margin-right: auto;  aspect-ratio: 1/1">
+<tr>
+    <td style="padding: 15px; text-align: center;">
+        <img src="./image/tung.jpeg" alt="Tung Le" 
+             style="width: 100%; max-width: 300px; height: auto; object-fit: cover;  aspect-ratio: 1/1" />
+    </td>
+    <td style="padding: 15px; text-align: center;">
+        <img src="./image/huy.png" alt="Vu Anh Huy Nguyen" 
+             style="width: 100%; max-width: 300px; height: auto; object-fit: cover;  aspect-ratio: 1/1" />
+    </td>
+    <td style="padding: 15px; text-align: center;">
+        <img src="./image/alice.jpg" alt="Minh Anh" 
+             style="width: 100%; max-width: 300px; height: auto; object-fit: cover;  aspect-ratio: 1/1" />
+    </td>
+    <td style="padding: 15px; text-align: center;">
+        <img src="./image/phu.jpg" alt="Manh Phu Giang" 
+             style="width: 100%; max-width: 300px; height: auto; object-fit: cover;  aspect-ratio: 1/1" />
+    </td>
+</tr>
     <tr>
         <td style="text-align: center;"><strong>Tung Le</strong><br/>Social Media Coordinator</td>
         <td style="text-align: center;"><strong>Vu Anh Huy Nguyen</strong><br/>Event Planner</td>
