--- a/public/event/tet2023/index.html
+++ b/public/event/tet2023/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="scroll-smooth" data-default-appearance="light"
-  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=64296&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="en" />
@@ -15,7 +15,7 @@
   <meta name="keywords" content="event, in-person, " />
   
   
-  <link rel="canonical" href="http://localhost:64296/event/tet2023/" />
+  <link rel="canonical" href="http://localhost:1313/event/tet2023/" />
   
   <link rel="alternate" type="application/rss+xml" href="/event/tet2023/index.xml" title=" " />
   
@@ -66,17 +66,17 @@
   
   
   
-  <meta property="og:url" content="http://localhost:64296/event/tet2023/">
+  <meta property="og:url" content="http://localhost:1313/event/tet2023/">
   <meta property="og:site_name" content=" ">
   <meta property="og:title" content="🌸 𝓥𝓢𝓐 𝓛𝓤𝓝𝓐𝓡 𝓝𝓔𝓦 𝓨𝓔𝓐𝓡 𝓖𝓐𝓣𝓗𝓔𝓡𝓘𝓝𝓖 2024 🌸">
   <meta property="og:description" content="VSA thật hạnh phúc khi được cùng các bạn tái hiện một góc xuân Việt với những hoạt động ý nghĩa như thi thời trang giấy, trang trí cành mai, cành đào, và các trò chơi dân gian đầy niềm vui. Những tiếng cười và khoảnh khắc sum vầy chính là điều làm nên sự đặc biệt của sự kiện lần này. 💖">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="http://localhost:64296/event/tet2023/feature.jpg">
+    <meta property="og:image" content="http://localhost:1313/event/tet2023/feature.jpg">
 
   
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="http://localhost:64296/event/tet2023/feature.jpg">
+  <meta name="twitter:image" content="http://localhost:1313/event/tet2023/feature.jpg">
   <meta name="twitter:title" content="🌸 𝓥𝓢𝓐 𝓛𝓤𝓝𝓐𝓡 𝓝𝓔𝓦 𝓨𝓔𝓐𝓡 𝓖𝓐𝓣𝓗𝓔𝓡𝓘𝓝𝓖 2024 🌸">
   <meta name="twitter:description" content="VSA thật hạnh phúc khi được cùng các bạn tái hiện một góc xuân Việt với những hoạt động ý nghĩa như thi thời trang giấy, trang trí cành mai, cành đào, và các trò chơi dân gian đầy niềm vui. Những tiếng cười và khoảnh khắc sum vầy chính là điều làm nên sự đặc biệt của sự kiện lần này. 💖">
 
@@ -577,7 +577,7 @@ Cùng VSA sum họp tại Lunar New Year Gathering thôi”</p>
 
 <div id="gallery-711d20cf48273f371fe8f12b83dc4540" class="gallery">
   
-  <img src="image/1.jpg" class="grid-w150 md:grid-w133 xl:grid-w125" />
+  <img src="image/1.png" class="grid-w150 md:grid-w133 xl:grid-w125" />
 
 </div>
 
@@ -645,7 +645,7 @@ Cùng VSA sum họp tại Lunar New Year Gathering thôi”</p>
 <div
   id="search-wrapper"
   class="invisible fixed inset-0 flex h-screen w-screen cursor-default flex-col bg-neutral-500/50 p-4 backdrop-blur-sm dark:bg-neutral-900/50 sm:p-6 md:p-[10vh] lg:p-[12vh]"
-  data-url="http://localhost:64296/"
+  data-url="http://localhost:1313/"
   style="z-index:500"
 >
   <div
