--- a/public/about/index.html
+++ b/public/about/index.html
@@ -32,8 +32,8 @@
     integrity="sha512-HJzQ0euvEXJytcT2vUmHhHXLIQ1eDaTwYWMtd59btGhRiBwYfm5jTbpQccTj2A59XOwd2ARDsvporNNY&#43;e2ogQ==" />
   
   
-  <script type="text/javascript" src="/js/appearance.min.6b91f03fcf4e30afd824b366c29c7d02b421280b05e6a00ae1418922d26072d4d4f5203a543b71fbfb88fb8aa8cde66632cb06858c817d44430531bf0e06f9db.js"
-    integrity="sha512-a5HwP89OMK/YJLNmwpx9ArQhKAsF5qAK4UGJItJgctTU9SA6VDtx&#43;/uI&#43;4qozeZmMssGhYyBfURDBTG/Dgb52w=="></script>
+  <script type="text/javascript" src="/js/appearance.min.28e6a625676e048b919b5cfcb5adda8aeea82eda5f1f8598c12628a6083804cacf9dfb9a2f99e55cf9930ec82dbe684ebee1c90a5dda2485e160b611cee617c0.js"
+    integrity="sha512-KOamJWduBIuRm1z8ta3aiu6oLtpfH4WYwSYopgg4BMrPnfuaL5nlXPmTDsgtvmhOvuHJCl3aJIXhYLYRzuYXwA=="></script>
   
   
   
@@ -156,7 +156,7 @@
             <span class="sr-only"></span>
 
             
-            <img src="/VSA%202025%20-%20Official%20logos-02.png" width="2250" height="2250"
+            <img src="/black.png" width="1063" height="1063"
                 class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt=" " />
             
 
