--- a/public/contactus/index.html
+++ b/public/contactus/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr" class="scroll-smooth" data-default-appearance="light"
-  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=50332&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="en" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://localhost:50332/contactus/" />
+  <link rel="canonical" href="http://localhost:1313/contactus/" />
   
   <link rel="alternate" type="application/rss+xml" href="/contactus/index.xml" title=" " />
   
@@ -32,8 +32,8 @@
     integrity="sha512-HJzQ0euvEXJytcT2vUmHhHXLIQ1eDaTwYWMtd59btGhRiBwYfm5jTbpQccTj2A59XOwd2ARDsvporNNY&#43;e2ogQ==" />
   
   
-  <script type="text/javascript" src="/js/appearance.min.6b91f03fcf4e30afd824b366c29c7d02b421280b05e6a00ae1418922d26072d4d4f5203a543b71fbfb88fb8aa8cde66632cb06858c817d44430531bf0e06f9db.js"
-    integrity="sha512-a5HwP89OMK/YJLNmwpx9ArQhKAsF5qAK4UGJItJgctTU9SA6VDtx&#43;/uI&#43;4qozeZmMssGhYyBfURDBTG/Dgb52w=="></script>
+  <script type="text/javascript" src="/js/appearance.min.28e6a625676e048b919b5cfcb5adda8aeea82eda5f1f8598c12628a6083804cacf9dfb9a2f99e55cf9930ec82dbe684ebee1c90a5dda2485e160b611cee617c0.js"
+    integrity="sha512-KOamJWduBIuRm1z8ta3aiu6oLtpfH4WYwSYopgg4BMrPnfuaL5nlXPmTDsgtvmhOvuHJCl3aJIXhYLYRzuYXwA=="></script>
   
   
   
@@ -66,7 +66,7 @@
   
   
   
-  <meta property="og:url" content="http://localhost:50332/contactus/">
+  <meta property="og:url" content="http://localhost:1313/contactus/">
   <meta property="og:site_name" content=" ">
   <meta property="og:title" content=" ">
   <meta property="og:description" content="The Vietnamese Student Association (VSA) at Sheridan College is dedicated to helping Vietnamese students adapt to life abroad and engage in building a vibrant community. Our mission is to provide support, foster connections, and create opportunities for personal and professional growth. Join us to make the most of your experience at Sheridan College and beyond!">
@@ -156,7 +156,7 @@
             <span class="sr-only"></span>
 
             
-            <img src="/VSA%202025%20-%20Official%20logos-02.png" width="2250" height="2250"
+            <img src="/black.png" width="1063" height="1063"
                 class="logo max-h-[5rem] max-w-[5rem] object-scale-down object-left nozoom" alt=" " />
             
 
@@ -730,7 +730,7 @@ Ontario, Canada</p>
 <div
   id="search-wrapper"
   class="invisible fixed inset-0 flex h-screen w-screen cursor-default flex-col bg-neutral-500/50 p-4 backdrop-blur-sm dark:bg-neutral-900/50 sm:p-6 md:p-[10vh] lg:p-[12vh]"
-  data-url="http://localhost:50332/"
+  data-url="http://localhost:1313/"
   style="z-index:500"
 >
   <div
