add merry click mas 2024

--- a/public/event/chirstmas2022/index.html
+++ b/public/event/chirstmas2022/index.html
@@ -12,7 +12,7 @@
   <meta name="title" content=" ☃️❄️||𝐂𝐇𝐑𝐈𝐒𝐓𝐌𝐀𝐒 𝐄𝐕𝐄𝐍𝐓|| ❄️☃️ &middot;  " />
   
   <meta name="description" content="VSA cảm ơn mọi người đã tham gia hoạt động Giáng Sinh lần này của chúng tớ 🥰 Hẹn gặp các bạn vào các hoạt động lần tới nhé 😆" />
-  <meta name="keywords" content="event, in-person, " />
+  <meta name="keywords" content="in-person, " />
   
   
   <link rel="canonical" href="http://localhost:1313/event/chirstmas2022/" />
@@ -588,6 +588,8 @@ Join us and have fun together 🥰</p>
   
   <img src="image/1.jpg" class="grid-w50 md:grid-w133 xl:grid-w125" />
   <img src="image/2.jpg" class="grid-w50 md:grid-w133 xl:grid-w50" />
+  <img src="image/3.jpg" class="grid-w50 md:grid-w133 xl:grid-w50" />
+  <img src="image/4.jpg" class="grid-w50 md:grid-w133 xl:grid-w50" />
 
 </div>
 
