--- a/public/event/halloween2023/index.html
+++ b/public/event/halloween2023/index.html
@@ -12,7 +12,7 @@
   <meta name="title" content="𝙑𝙎𝘼 𝙃𝙖𝙡𝙡𝙤𝙬𝙚𝙚𝙣 𝙚𝙫𝙚𝙣𝙩 &middot;  " />
   
   <meta name="description" content="Thank you for joining our Halloween event. Happy Halloween 🎃 all the best wishes from VSA. We hope to see you guys on the next Christmas Event" />
-  <meta name="keywords" content="event, in-person, " />
+  <meta name="keywords" content="in-person, " />
   
   
   <link rel="canonical" href="http://localhost:1313/event/halloween2023/" />
