--- a/public/event/torontotrip2022/index.html
+++ b/public/event/torontotrip2022/index.html
@@ -12,7 +12,7 @@
   <meta name="title" content="Summer One-Day-Trip with VSA & SSU &middot;  " />
   
   <meta name="description" content=" Phá đảo Toronto Island cùng VSA và SSU 💖" />
-  <meta name="keywords" content="event, in-person, " />
+  <meta name="keywords" content="in-person, " />
   
   
   <link rel="canonical" href="http://localhost:1313/event/torontotrip2022/" />
