--- a/public/index.html
+++ b/public/index.html
@@ -568,7 +568,7 @@
 <script>
     document.addEventListener("DOMContentLoaded", function () {
       new TypeIt("#typeit-6fb22d3943ec7794c447a8e7c1bb77a4", {
-        strings: ["\r","🔥 VSA SHERIDAN IS LOOKING FOR EXECUTIVE TEAM \u0026 CLUB COORDINATORS! 🔥  "],
+        strings: ["","🔥 VSA SHERIDAN IS LOOKING FOR EXECUTIVE TEAM \u0026 CLUB COORDINATORS! 🔥  "],
         speed:  10 ,
         lifeLike:  false ,
         startDelay:  0 ,
