--- a/public/oursponsor/index.html
+++ b/public/oursponsor/index.html
@@ -559,7 +559,7 @@
 <script>
     document.addEventListener("DOMContentLoaded", function () {
       new TypeIt("#typeit-aa0316b5444676628cca4919f84eca9e", {
-        strings: ["\r","  💕 A big thanks to any individuals and organizations that helped make this magic happen. 🔥🥰"],
+        strings: ["","  💕 A big thanks to any individuals and organizations that helped make this magic happen. 🔥🥰"],
         speed:  10 ,
         lifeLike:  true ,
         startDelay:  0 ,
