--- a/public/event/tet2023/index.html
+++ b/public/event/tet2023/index.html
@@ -12,7 +12,7 @@
   <meta name="title" content="🌸 𝓥𝓢𝓐 𝓛𝓤𝓝𝓐𝓡 𝓝𝓔𝓦 𝓨𝓔𝓐𝓡 𝓖𝓐𝓣𝓗𝓔𝓡𝓘𝓝𝓖 2024 🌸 &middot;  " />
   
   <meta name="description" content="VSA thật hạnh phúc khi được cùng các bạn tái hiện một góc xuân Việt với những hoạt động ý nghĩa như thi thời trang giấy, trang trí cành mai, cành đào, và các trò chơi dân gian đầy niềm vui. Những tiếng cười và khoảnh khắc sum vầy chính là điều làm nên sự đặc biệt của sự kiện lần này. 💖" />
-  <meta name="keywords" content="event, in-person, " />
+  <meta name="keywords" content="in-person, " />
   
   
   <link rel="canonical" href="http://localhost:1313/event/tet2023/" />
